--- a/PredictionReconciliationNetwork/PredictionReconciliationNetwork.csproj
+++ b/PredictionReconciliationNetwork/PredictionReconciliationNetwork.csproj
@@ -44,6 +44,7 @@
     <Compile Include="State\IState.cs" />
     <Compile Include="Ticker.cs" />
     <Compile Include="State\IStateConsistencyChecker.cs" />
+    <Compile Include="State\StateSyncPolicy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
