--- a/PredictionReconciliationNetwork/PredictionReconciliationNetwork.csproj
+++ b/PredictionReconciliationNetwork/PredictionReconciliationNetwork.csproj
@@ -8,6 +8,7 @@
     <RootNamespace>PredictionReconciliationNetwork</RootNamespace>
     <AssemblyName>PredictionReconciliationNetwork</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <ReleaseVersion>1.2.0</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
